<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintlayoutISSSSTE">

    <EditText
        android:id="@+id/rutaFUAISSSTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rutaContadorISSSTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rutaFUAISSSTE"
        tools:layout_editor_absoluteX="0dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="114dp"
        android:text="@string/texto_evidencias"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="164dp"
        android:text="@string/consejo_evidencia"
        android:textAlignment="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btnTomarFotoFUAISSSTE"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="262dp"
        android:background="@drawable/reg_btn_tomar_foto_style"
        android:text="@string/btn_tomar_foto_fua"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTomarFotoContadorISSSTE"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/reg_btn_tomar_foto_style"
        android:text="@string/btn_tomar_foto_contador"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTomarFotoFUAISSSTE" />

    <Button
        android:id="@+id/btnGuardarEvidenciasSQLISSSTE"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_salir_sesion_style"
        android:text="@string/btn_subir_fotos_fuas_server"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/diskette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTomarFotoContadorISSSTE" />

</androidx.constraintlayout.widget.ConstraintLayout>