<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintlayoutLogin"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        android:id="@+id/imageHeader"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inicioestratec"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"/>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/viewSoporter"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSoporter">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <!-- everything you already have -->


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/textView_inicia_sesion"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtUsuario"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edittext_style"
                            android:hint="@string/editText_hint_usuario"
                            android:inputType="textCapWords"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#616161"
                            android:autofillHints="" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edittext_style"
                            android:hint="@string/editText_hint_password"
                            android:inputType="textPassword|textCapWords"
                            android:textColor="#000000"
                            android:textColorHint="#616161" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spiTipoUsuario"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp" />

                    <Spinner
                        android:id="@+id/spiCliente"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp" />

                    <Button
                        android:id="@+id/btnIniciarSesion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/btn_iniciar_sesion_style"
                        android:text="@string/btn_iniciar_sesion"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnSalir"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:background="@drawable/btn_salir_sesion_style"
                        android:text="@string/btn_salir_sesion"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />

                </LinearLayout>

            </TableLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>